force-app/main/default/objects/ReconciliationLineItem__c/ReconciliationLineItem__c.object-meta.xml
<CustomObject>
    <label>Reconciliation Line Item</label>
    <nameField>
        <displayFormat>RLI-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reconciliation Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>