force-app/main/default/objects/ReconciliationLineItem__c/fields/Balance_fm__c.field-meta.xml
<CustomField>
    <fullName>Balance_fm__c</fullName>
    <formula>RefBankTransaction__r.Balance__c + RefFiduciaryOthers__r.RefBankTransaction__r.Balance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>