force-app/main/default/objects/ReconciliationLineItem__c/fields/BankAccount__c.field-meta.xml
<CustomField>
    <fullName>BankAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bank Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Reconciliation Line Items as Bank Account</relationshipLabel>
    <relationshipName>ReconciliationLineItemsAsBankAccount</relationshipName>
    <type>Lookup</type>
</CustomField>