force-app/main/default/objects/ReconciliationLineItem__c/fields/BTAccountName__c.field-meta.xml
<CustomField>
    <fullName>BTAccountName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Reconciliation Line Items (Account Name)</relationshipLabel>
    <relationshipName>ReconciliationLineItemsAsBtAccountName</relationshipName>
    <type>Lookup</type>
</CustomField>