force-app/main/default/objects/ReconciliationLineItem__c/fields/BTAccountName_fm__c.field-meta.xml
<CustomField>
    <fullName>BTAccountName_fm__c</fullName>
    <formula>NULLVALUE(
    RefBankTransaction__r.AccountName__c,
    RefFiduciaryOthers__r.AccountName__c 
)</formula>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>