force-app/main/default/objects/ReconciliationLineItem__c/fields/BTCurrency__c.field-meta.xml
<CustomField>
    <fullName>BTCurrency__c</fullName>
    <label>BT Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>COM_Currency</valueSetName>
    </valueSet>
</CustomField>