force-app/main/default/objects/ReconciliationLineItem__c/fields/BTCurrency_fm__c.field-meta.xml
<CustomField>
    <fullName>BTCurrency_fm__c</fullName>
    <formula>TEXT(RefBankTransaction__r.Currency__c) &amp; TEXT(RefFiduciaryOthers__r.SettlementCurrency__c)</formula>
    <label>BT Currency</label>
    <type>Text</type>
</CustomField>