force-app/main/default/objects/ReconciliationLineItem__c/fields/BTOriginAmount__c.field-meta.xml
<CustomField>
    <fullName>BTOriginAmount__c</fullName>
    <label>Origin Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>