force-app/main/default/objects/ReconciliationLineItem__c/fields/BTOriginAmount_fm__c.field-meta.xml
<CustomField>
    <fullName>BTOriginAmount_fm__c</fullName>
    <formula>RefBankTransaction__r.OriginAmount__c + RefFiduciaryOthers__r.OriginAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BT Origin Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>