force-app/main/default/objects/ReconciliationLineItem__c/fields/BTStatus__c.field-meta.xml
<CustomField>
    <fullName>BTStatus__c</fullName>
    <label>BT Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Clear</fullName>
            </value>
            <value>
                <fullName>Partial</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>