force-app/main/default/objects/ReconciliationLineItem__c/fields/BTStatus_fm__c.field-meta.xml
<CustomField>
    <fullName>BTStatus_fm__c</fullName>
    <formula>TEXT(RefBankTransaction__r.Status__c) &amp; TEXT(RefFiduciaryOthers__r.Status__c)</formula>
    <label>BT Status</label>
    <type>Text</type>
</CustomField>