force-app/main/default/objects/ReconciliationLineItem__c/fields/ClosingType__c.field-meta.xml
<CustomField>
    <fullName>ClosingType__c</fullName>
    <label>Closing Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>P_R</fullName>
            </value>
            <value>
                <fullName>P_B</fullName>
            </value>
            <value>
                <fullName>P_FA</fullName>
            </value>
            <value>
                <fullName>P_FL</fullName>
            </value>
            <value>
                <fullName>P_C</fullName>
            </value>
            <value>
                <fullName>C_FA</fullName>
            </value>
            <value>
                <fullName>C_FL</fullName>
            </value>
            <value>
                <fullName>ADJ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>