force-app/main/default/objects/ReconciliationLineItem__c/fields/COAName_fm__c.field-meta.xml
<CustomField>
    <fullName>COAName_fm__c</fullName>
    <formula>COA_lk__r.COAName__c</formula>
    <label>COA Name</label>
    <type>Text</type>
</CustomField>