force-app/main/default/objects/ReconciliationLineItem__c/fields/Depositor_fm__c.field-meta.xml
<CustomField>
    <fullName>Depositor_fm__c</fullName>
    <formula>RefBankTransaction__r.Depositor__c &amp; RefFiduciaryOthers__r.Depositor__c</formula>
    <label>Depositor</label>
    <type>Text</type>
</CustomField>