force-app/main/default/objects/ReconciliationLineItem__c/fields/ExchangeAmount__c.field-meta.xml
<CustomField>
    <fullName>ExchangeAmount__c</fullName>
    <label>Exchange Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>