force-app/main/default/objects/ReconciliationLineItem__c/fields/ExchangeDate__c.field-meta.xml
<CustomField>
    <fullName>ExchangeDate__c</fullName>
    <label>Exchange Date</label>
    <type>Date</type>
</CustomField>