force-app/main/default/objects/ReconciliationLineItem__c/fields/FXAmountPremiumLocal__c.field-meta.xml
<CustomField>
    <fullName>FXAmountPremiumLocal__c</fullName>
    <label>Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>