force-app/main/default/objects/ReconciliationLineItem__c/fields/FXRateOrigintoSettlement__c.field-meta.xml
<CustomField>
    <fullName>FXRateOrigintoSettlement__c</fullName>
    <label>FX Rate(From Origin to Settlement)</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>