force-app/main/default/objects/ReconciliationLineItem__c/fields/HoldReason__c.field-meta.xml
<CustomField>
    <fullName>HoldReason__c</fullName>
    <label>Hold Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>