force-app/main/default/objects/ReconciliationLineItem__c/fields/IsOtherCharges__c.field-meta.xml
<CustomField>
    <fullName>IsOtherCharges__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Other Charges</label>
    <type>Checkbox</type>
</CustomField>