force-app/main/default/objects/ReconciliationLineItem__c/fields/MatchedBrokerageAMT__c.field-meta.xml
<CustomField>
    <fullName>MatchedBrokerageAMT__c</fullName>
    <label>Matched Brokerage AMT</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>