force-app/main/default/objects/ReconciliationLineItem__c/fields/MatchedPremiumAMT__c.field-meta.xml
<CustomField>
    <fullName>MatchedPremiumAMT__c</fullName>
    <label>Matched Premium AMT</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>