force-app/main/default/objects/ReconciliationLineItem__c/fields/MatchingStatus__c.field-meta.xml
<CustomField>
    <fullName>MatchingStatus__c</fullName>
    <label>Matching Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>