force-app/main/default/objects/ReconciliationLineItem__c/fields/NeedsVerification__c.field-meta.xml
<CustomField>
    <fullName>NeedsVerification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Needs Verification</label>
    <type>Checkbox</type>
</CustomField>