force-app/main/default/objects/ReconciliationLineItem__c/fields/NetAmountAfterClearing__c.field-meta.xml
<CustomField>
    <fullName>NetAmountAfterClearing__c</fullName>
    <label>Not-Reconciled AMT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>