force-app/main/default/objects/ReconciliationLineItem__c/fields/NetBalanceAftCleared_fm__c.field-meta.xml
<CustomField>
    <fullName>NetBalanceAftCleared_fm__c</fullName>
    <formula>RefBankTransaction__r.NetBalanceAftCleared__c + RefFiduciaryOthers__r.NotReconciledAMT__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Not-Reconciled AMT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>