force-app/main/default/objects/ReconciliationLineItem__c/fields/NotMatchedBrokerageAMT__c.field-meta.xml
<CustomField>
    <fullName>NotMatchedBrokerageAMT__c</fullName>
    <label>Not Matched Brokerage AMT</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>