force-app/main/default/objects/ReconciliationLineItem__c/fields/NotMatchedPremiumAMT__c.field-meta.xml
<CustomField>
    <fullName>NotMatchedPremiumAMT__c</fullName>
    <label>Not Matched Premium AMT</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>