force-app/main/default/objects/ReconciliationLineItem__c/fields/OriginBankTransaction__c.field-meta.xml
<CustomField>
    <fullName>OriginBankTransaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Origin Bank Transaction</label>
    <referenceTo>BankTransaction__c</referenceTo>
    <relationshipLabel>Reconciliation Line Items (Origin Bank Transaction)</relationshipLabel>
    <relationshipName>ReconciliationLineItemsAsOrigin</relationshipName>
    <type>Lookup</type>
</CustomField>