force-app/main/default/objects/ReconciliationLineItem__c/fields/OriginSettlementLineItem__c.field-meta.xml
<CustomField>
    <fullName>OriginSettlementLineItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Origin Settlement Line Item</label>
    <referenceTo>SettlementLineItem__c</referenceTo>
    <relationshipLabel>Reconciliation Line Items (Origin Settlement Line Item)</relationshipLabel>
    <relationshipName>ReconciliationLineItemsAsOrigin</relationshipName>
    <type>Lookup</type>
</CustomField>