force-app/main/default/objects/ReconciliationLineItem__c/fields/RefBankTransaction__c.field-meta.xml
<CustomField>
    <fullName>RefBankTransaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ref. Bank Transaction</label>
    <referenceTo>BankTransaction__c</referenceTo>
    <relationshipLabel>Reconciliation Line Items as Ref</relationshipLabel>
    <relationshipName>ReconciliationLineItemsAsRef</relationshipName>
    <type>Lookup</type>
</CustomField>