force-app/main/default/objects/ReconciliationLineItem__c/fields/RefFiduciaryOthers__c.field-meta.xml
<CustomField>
    <fullName>RefFiduciaryOthers__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ref. Fiduciary Others</label>
    <referenceTo>FiduciaryOthers__c</referenceTo>
    <relationshipLabel>Reconciliation Line Items</relationshipLabel>
    <relationshipName>ReconciliationLineItemsAsRef</relationshipName>
    <type>Lookup</type>
</CustomField>