force-app/main/default/objects/ReconciliationLineItem__c/fields/RefReconciliation__c.field-meta.xml
<CustomField>
    <fullName>RefReconciliation__c</fullName>
    <label>Ref. Reconciliation</label>
    <referenceTo>Reconciliation__c</referenceTo>
    <relationshipLabel>Reconciliation Line Items</relationshipLabel>
    <relationshipName>ReconciliationLineItems</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>