force-app/main/default/objects/ReconciliationLineItem__c/fields/RefSettlementLineItem__c.field-meta.xml
<CustomField>
    <fullName>RefSettlementLineItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ref. Closing</label>
    <referenceTo>SettlementLineItem__c</referenceTo>
    <relationshipLabel>Reconciliation Line Items</relationshipLabel>
    <relationshipName>ReconciliationLineItemsAsRef</relationshipName>
    <type>Lookup</type>
</CustomField>