force-app/main/default/objects/ReconciliationLineItem__c/fields/RefStatement__c.field-meta.xml
<CustomField>
    <fullName>RefStatement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ref. Statement</label>
    <referenceTo>Statement__c</referenceTo>
    <relationshipLabel>Reconciliation Line Items</relationshipLabel>
    <relationshipName>ReconciliationLineItems</relationshipName>
    <type>Lookup</type>
</CustomField>