force-app/main/default/objects/ReconciliationLineItem__c/fields/RefStatementLineItem__c.field-meta.xml
<CustomField>
    <fullName>RefStatementLineItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ref. Statement Line Item</label>
    <referenceTo>StatementLineItem__c</referenceTo>
    <relationshipLabel>Reconciliation Line Items</relationshipLabel>
    <relationshipName>ReconciliationLineItemsAsRef</relationshipName>
    <type>Lookup</type>
</CustomField>