force-app/main/default/objects/ReconciliationLineItem__c/fields/RefType__c.field-meta.xml
<CustomField>
    <fullName>RefType__c</fullName>
    <formula>IF(IsOtherCharges__c, &quot;Other Charges&quot;, &quot;&quot;)
&amp;
IF(
    AND( NOT(IsOtherCharges__c), NOT(ISBLANK(RefBankTransaction__c)) ),
    &quot;Bank Transaction&quot;,
    &quot;&quot;
)
&amp;
IF(
    AND( NOT(IsOtherCharges__c), NOT(ISBLANK(RefSettlementLineItem__c)) ),
    &quot;Settlement Line Item&quot;,
    &quot;&quot;
)
&amp;
IF(ISBLANK(RefFiduciaryOthers__c), &quot;&quot;, &quot;Fiduciary Others&quot;) 
&amp;  
IF(ISBLANK(RefStatement__c), &quot;&quot;, &quot;Statement&quot;) 
&amp;  
IF(ISBLANK(RefStatementLineItem__c), &quot;&quot;, &quot;Statement Line Item&quot;)</formula>
    <label>Ref. Type</label>
    <type>Text</type>
</CustomField>