force-app/main/default/objects/ReconciliationLineItem__c/fields/RLIStatus__c.field-meta.xml
<CustomField>
    <fullName>RLIStatus__c</fullName>
    <formula>Text(RefReconciliation__r.Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RLI Status</label>
    <type>Text</type>
</CustomField>