force-app/main/default/objects/ReconciliationLineItem__c/fields/SettlementAmountPremium__c.field-meta.xml
<CustomField>
    <fullName>SettlementAmountPremium__c</fullName>
    <label>Settlement Amount (Premium)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>