force-app/main/default/objects/ReconciliationLineItem__c/fields/SettlementAmountTTL__c.field-meta.xml
<CustomField>
    <fullName>SettlementAmountTTL__c</fullName>
    <label>Settlement Amount(TTL)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>