force-app/main/default/objects/ReconciliationLineItem__c/fields/TotalClearedAmount_fm__c.field-meta.xml
<CustomField>
    <fullName>TotalClearedAmount_fm__c</fullName>
    <formula>RefBankTransaction__r.TotalClearedAmount__c + RefFiduciaryOthers__r.ReconciledAMT__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Reconciled AMT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>