force-app/main/default/objects/ReconciliationLineItem__c/fields/TotalPremiumAMT__c.field-meta.xml
<CustomField>
    <fullName>TotalPremiumAMT__c</fullName>
    <label>Total Premium AMT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>