force-app/main/default/objects/ReconciliationLineItem__c/fields/TransactionDate_fm__c.field-meta.xml
<CustomField>
    <fullName>TransactionDate_fm__c</fullName>
    <formula>NULLVALUE(
    RefBankTransaction__r.TransactionDate__c,
    RefFiduciaryOthers__r.TransactionDate__c
)</formula>
    <label>Transaction Date</label>
    <type>Date</type>
</CustomField>