force-app/main/default/objects/ReconciliationLineItem__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RefReconciliation__c</columns>
    <columns>RefBankTransaction__c</columns>
    <columns>RefSettlementLineItem__c</columns>
    <columns>RefFiduciaryOthers__c</columns>
    <columns>RLIStatus__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>